# Reduction_library

./: .gitignore  CMakeLists.txt  README.md  Reduction
examples/Make_species/: CMakeLists.txt
examples/Make_species/src/: main.cpp
examples/Particle_access/: CMakeLists.txt
examples/Particle_access/src/: main.cpp
include/reduction_library/: Base_attributes_getters.hpp  Base_particle.hpp  HDNLINE.hpp  HINLINE.hpp  Particle.hpp  Particle_getters.hpp  Traits.hpp  Type.hpp
include/reduction_library/AOS/: Component.hpp  Data_axis.hpp  Particle.cpp  Particle.hpp  Particle_spicies.hpp  Record_component.hpp
include/reduction_library/SOA/: Alpaka_dataset.hpp  Aplaka_Dataset.hpp  Component.hpp  Component_traits.hpp  Copmponent.cpp  Dataset.hpp  Dataset_traits.hpp  Particle.cpp  Particle.hpp  Particle_species.hpp  Particle_species_traits.hpp  Particle_spicies.hpp  Particle_spicies_old.hpp  Particlest.cpp  Particlest.hpp  Record.hpp  Record3d.hpp  Record_3d.hpp  Record_component.hpp  Record_creation.hpp  Record_getters.hpp  Record_scalar.hpp  Record_traits.hpp  Species_different_acc.hpp  Species_make.hpp
include/reduction_library/attribute/: AtrributeChunk.hpp  Attributes_types.hpp  Base_attributes_getters.hpp  Scalar_record.hpp  Traits.hpp  Type.hpp
include/reduction_library/component/: Concept.hpp  Interfaces.hpp  Name.hpp  Traits.hpp  Type.hpp  Utility.hpp
include/reduction_library/helpers/: Tuple_idx_getters.hpp  Type_list.hpp
include/reduction_library/meging/: Kmeans_merging.hpp  Randomize_Voronoi_merging.hpp  Two_particles_distribution.hpp  k_means_merge_avg.hpp
include/reduction_library/objects/: Base_attributes_getters.hpp  Scalar_records_names.hpp  Traits.hpp  Type.hpp
include/reduction_library/objects/record_component/: Base_record_component.hpp  Record_component_names.hpp  Traits.hpp  Type.hpp
include/reduction_library/particle_species/: Interfaces.hpp  Name.hpp  Traits.hpp  Type.hpp
include/reduction_library/particle_spicies/: Interfaces.hpp  Name.hpp  Type.hpp
include/reduction_library/record/: Concept.hpp  Interfaces.hpp  Name.hpp  Traits.hpp  Type.hpp  Utility.hpp
include/reduction_library/thinning/: Energy_conservative_thinning.hpp  InKernelThinning.hpp  In_kernel_thinning.hpp  KernelThinning.hpp  Leveling_thinning.hpp  Number_conservative_thinning.hpp  Random_thinning.hpp  Sample_getting.hpp  Thinning.hpp  Thinning_alpaka_kernell.hpp  Thinning_out_kernell.hpp  Thinning_particles_spicialization.hpp
include/reduction_library/thinning/helpers/: Energy_counting.hpp  Sample_getting.hpp
reduction_template_library/: .cproject  .project  CMakeLists.txt
reduction_template_library/Debug/: makefile  objects.mk  openPMDreadingSample
reduction_template_library/Debug/src/: openPMDreadingSample.d  subdir.mk
reduction_template_library/src/: Atributes_types.hpp  AtrributeChunk.hpp  Attributes_getting.hpp  Attributes_types.hpp  Base_attributes_getters.hpp  IKernellThinning.hpp  Particle.cpp  Particle.hpp  Particle_reader.hpp  Particle_type.hpp  Particle_writer.hpp  Particles.cpp  Particles.hpp  Particles_attributes.hpp  Particlest.hpp  Thinning.hpp  Thinning_particles_spicialization.hpp  main.cpp  openPMDreadingSample.cpp
reduction_template_library/src/IO/: Particle_reader.hpp
reduction_template_library/src/attribute/: Traits.hpp  Type.hpp
reduction_template_library/src/particles/: Particle.cpp  Particle.hpp  Particles.hpp  Particlest.cpp  Particlest.hpp
reduction_template_library/src/thinning/: IKernellThinning.hpp
src/: main.cpp
src/AOS/: Particles.hpp
src/IO/: Particle_reader.hpp  Particle_writer.hpp  Record_names.hpp
src/SOA/: Particlest.cpp  Particlest.hpp
src/openPMD-api/: OpenPMD_reduction.hpp
src/particles/: Particle.cpp  Particle.hpp  Particles.cpp  Particlest.cpp
src/thinning/: IKernellThinning.hpp  Thinning.hpp  Thinning_particles_spicialization.hpp
